crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_semicolons.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
